fixed for alignment and contact number validation

--- a/ui.frontend/src/main/webpack/etisalat/styles/wst-form.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/wst-form.scss
@@ -138,12 +138,12 @@
   }
   .country-select {
     width: 100%;
-    @media (max-width: $screen-md-min) {
+    @include respond-to-min($tablet) {
       width: 18rem !important;
     }
-    @media (min-width: $screen-lg-max) {
+    @include respond-to-min($desktop) {
       width: 32.5rem !important;
-    }
+      }   
    
   }
   .select-hear-about-us,
